--- a/amuse.html
+++ b/amuse.html
@@ -6,12 +6,22 @@
   </head>
   <body>
     <h1>Funny Things on the Web</h1>
+    <h3>By: Sydney Jagger</h3>
     <section>
       <h2>Top Laugh</h2>
-    <p> </p>
-    <a herf="">Name</a>
+    <p>This is my top favorite vidoe to always laugh to!</p>
+    <a herf="https://www.tiktok.com/@dailymail/video/6845627387934199045?lang=en">TERRY</a>
   </section>
-  </body>
+ <section>
+      <h2>Sometimes Laughs</h2>
+    <p>Dogs are too funny not to laugh at! </p>
+    <a herf="https://www.tiktok.com/@woody_the_englishcocker/video/7312755368357154080?lang=en">Dog Waking Up</a>
+  </section>
+     <section>
+      <h2>Trends of 2024 Laughs</h2>
+    <p>This a recent trend of 2024 and it has filled my TikTok page!</p>
+    <a herf="https://www.tiktok.com/@kervo.dolo/video/7325928501960297771?lang=en">Nobody Knows Me...</a>
+  </section>
   </body>
   </head>
 </html>
