--- a/amuse.html
+++ b/amuse.html
@@ -7,6 +7,7 @@
   <body>
     <h1>Funny Things on the Web</h1>
     <h3>By:Sydney Jagger</h3>
+    <p> I love to come to scroll on social media for a good laugh!</p>
     <section>
       <h2>Top Laugh</h2>
     <p>This is my top favorite vidoe to always laugh to!</p>
