--- a/amuse.html
+++ b/amuse.html
@@ -7,10 +7,10 @@
   <body>
     <h1>Funny Things on the Web</h1>
     <h3>By:Sydney Jagger</h3>
-    <p> I love to come to scroll on social media for a good laugh!</p>
+    <p>You can always scroll on social media to find funny videos!</p>
     <section>
       <h2>Top Laugh</h2>
-    <p>This is my top favorite vidoe to always laugh to!</p>
+    <p>This is my top favorite funny video!</p>
     <a href="https://www.tiktok.com/@dailymail/video/6845627387934199045?lang=en">TERRY</a>
   </section>
  <section>
