--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hi my name is Sydney 
+<html>
+<head>
+  <title>Homepage</title>
+</head>
+<body>
+  <h1>My Homepage</h1>
+  <img src="logo.png" alt="UNC LOGO"> height="80">
+<ul>
+  <li><a href= "https://sydneyjagger.github.io/amuse.html">"Funny Page</a></li>
+  <li><a href= "https://sydneyjagger.github.io/profile.html"> "My Page"</a></li>
+  <li><a href= "https://sydneyjagger.github.io/inspire.html"> "Inspire Page</a></li>
+</ul>
+</body>
+</html>
+
