--- a/template.html
+++ b/template.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html land="en">
   <head>
-    <meta charset="UTF-8"
+    <meta charset="UTF-8">
     <title>TEMPLATE</title>
   </head>
   <body>
     <h1>Page Title</h1>
   </body>
-  </body>
-  </head>
 </html>
