--- a/test.html
+++ b/test.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"
-    <title>TEMPLATE</title>
+    <meta charset="UTF-8">
+    <title>Testing Page</title>
   </head>
   <body>
     <h1>Testing</h1>
@@ -14,7 +14,28 @@
       </tr>
       <tr>
         <th>Template</th>
-        <td><a href="https://sydneyjagger.github.io/template.html"</a></td>
+        <td><a href="https://sydneyjagger.github.io/template.html">https://sydneyjagger.github.io/template.html</a></td>
+        <td><a href="https://validator.w3.org/nu/?doc=httpssydneyjagger.github.iotemplate.html">VALIDATE</a></td>
+      </tr>
+       <tr>
+        <th>Home Page</th>
+        <td><a href="https://sydneyjagger.github.io/index.html">https://sydneyjagger.github.io/index.html</a></td>
+        <td><a href="https://validator.w3.org/nu/?doc=httpssydneyjagger.github.ioindex.html">VALIDATE</a></td>
+      </tr>
+       <tr>
+        <th>Profile</th>
+        <td><a href="https://sydneyjagger.github.io/profile.html">https://sydneyjagger.github.io/profile.html</a></td>
+        <td><a href="https://validator.w3.org/nu/?doc=httpssydneyjagger.github.ioprofile.html">VALIDATE</a></td>
+      </tr>
+       <tr>
+        <th>Amuse</th>
+        <td><a href="https://sydneyjagger.github.io/amuse.html">https://sydneyjagger.github.io/amuse.html</a></td>
+        <td><a href="https://validator.w3.org/nu/?doc=httpssydneyjagger.github.ioamuse.html">VALIDATE</a></td>
+      </tr>
+       <tr>
+        <th>Inspire</th>
+        <td><a href="https://sydneyjagger.github.io/inspire.html">https://sydneyjagger.github.io/inspire.html</a></td>
+        <td><a href="https://validator.w3.org/nu/?doc=httpssydneyjagger.github.ioinspire.html">VALIDATE</a></td>
       </tr>
     </table>
   </body>
