--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>My Homepage</h1>
-  <img src="_marketing-communications_assets_logos_08_unc_bear_horiz_c.png" alt="UNC LOGO"> height="80">
+  <img src="_marketing-communications_assets_logos_08_unc_bear_horiz_c.png" alt="UNC LOGO">
 <ul>
   <li><a href= "https://sydneyjagger.github.io/amuse.html">"Funny Page</a></li>
   <li><a href= "https://sydneyjagger.github.io/profile.html"> "My Page"</a></li>
@@ -14,4 +14,3 @@
 </ul>
 </body>
 </html>
-
