--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en>
 <head>
   <title>Homepage</title>
-  <meta charse="UTF-8">
-</head>
+ <meta charse="UTF-8">
 <body>
   <h1>My Homepage</h1>
-  <img src="_marketing-communications_assets_logos_08_unc_bear_horiz_c.png" alt="UNC LOGO">
 <ul>
   <li><a href= "https://sydneyjagger.github.io/amuse.html">"Funny Page</a></li>
   <li><a href= "https://sydneyjagger.github.io/profile.html"> "My Page"</a></li>
   <li><a href= "https://sydneyjagger.github.io/inspire.html"> "Inspire Page</a></li>
 </ul>
 </body>
+  <img src="_marketing-communications_assets_logos_08_unc_bear_horiz_c.png" alt="UNC LOGO">
 </html>
