--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
   <li><a href= "https://sydneyjagger.github.io/inspire.html"> "Inspire Page"</a></li>
 </ul>
 </body>
-  <img src="UNC Logo.png" alt="UNC LOGO"> height="80">
+  <img src="UNC Logo.png" alt="UNC LOGO"> 
 </html>
