--- a/inspire.html
+++ b/inspire.html
@@ -12,5 +12,7 @@
       She is the world's youngest Nobel Prize laureate, the second Pakistani 
       and the first Pashtun to receive a Nobel Prize.</p>
       <p><a href="https://malala.org/malalas-story">Learn More...</a>a></p> 
+    </section>
+        <a herf="idex.html>img src="images/button_home.png" alt="HOME"></a>
     </body>
 </html>
