--- a/amuse.html
+++ b/amuse.html
@@ -23,6 +23,7 @@
     <p>This a recent trend of 2024 and it has filled my TikTok page!</p>
     <a href="https://www.tiktok.com/@kervo.dolo/video/7325928501960297771?lang=en">Nobody Knows Me...</a>
   </section>
+    <a herf="idex.html>img src="images/button_home.png" alt="HOME"></a>
   </body>
   </head>
 </html>
