--- a/superhero.html
+++ b/superhero.html
@@ -57,6 +57,21 @@
                     </td>
                 </tr>
                 <tr>
+                    <th>Wonder Women</th>
+                    <td>Wade Wilsont</td>
+                    <td><a href="image/wonderwomen.webp"><img class="heropic" src="image/wonderwomen.webp" alt="Wonder Women Pic"></a></td>
+                    <td>
+                        <ul>
+                            <li>Flight</li>
+                            <li>Strength</li>
+                            <li>Immortality</li>
+                        </ul>
+                    </td>
+                    <td>
+                        She used to be rendered powerless if she was bound or shackled by a man.
+                    </td>
+                </tr>
+                <tr>
                     <th>Deadpool</th>
                     <td>Wade Wilsont</td>
                     <td><a href="image/deadpool.webp"><img class="heropic" src="image/deadpool.webp" alt="Deadpool Pic"></a></td>
@@ -67,6 +82,19 @@
                     </td>
                     <td>
                         Cows and Clowns
+                    </td>
+                </tr>
+                 <tr>
+                    <th>Black Panther</th>
+                    <td>T'ChallaBlack Panthert</td>
+                    <td><a href="image/T'Challa.jpg"><img class="heropic" src="image/T'Challa.jpg" alt="Black Panther Pic"></a></td>
+                    <td>
+                        <ul>
+                            <li>Enhanced Strength and Senses</li>
+                        </ul>
+                    </td>
+                    <td>
+                        Human
                     </td>
                 </tr>
             </tbody>
