--- a/superhero.html
+++ b/superhero.html
@@ -52,7 +52,7 @@
                         </ul>
                     <td>
                         <ul>
-                            <li>Lacks confidence in his abilities</li>
+                            Lacks confidence in his abilities
                         </ul>
                     </td>
                 </tr>
