--- a/superhero.html
+++ b/superhero.html
@@ -58,7 +58,7 @@
                 </tr>
                 <tr>
                     <th>Wonder Women</th>
-                    <td>Wade Wilsont</td>
+                    <td>Diana Prince</td>
                     <td><a href="image/wonderwomen.webp"><img class="heropic" src="image/wonderwomen.webp" alt="Wonder Women Pic"></a></td>
                     <td>
                         <ul>
