--- a/superhero.html
+++ b/superhero.html
@@ -68,7 +68,7 @@
                         </ul>
                     </td>
                     <td>
-                        She used to be rendered powerless if she was bound or shackled by a man.
+                        She used to be rendered powerless if she was bound or shackled by a man
                     </td>
                 </tr>
                 <tr>
