--- a/superhero.html
+++ b/superhero.html
@@ -21,7 +21,7 @@
             }
             th
             {
-                background-color: red;
+                background-color: pink;
                 font-size: 18px;
             }
         </style>
