--- a/superhero.html
+++ b/superhero.html
@@ -59,7 +59,7 @@
                 <tr>
                     <th>Wonder Women</th>
                     <td>Diana Prince</td>
-                   <td><a href="https://media.newyorker.com/photos/593581e785bd115baccba6d2/master/pass/Lane-Ten-Things-about-Wonder-Woman.jpg"><img class="heropic" src="images/wonder.woman.webp" alt="Wonder Woman Pic""></a></td>
+                   <td><a href="https://www.google.com/search?sca_esv=1a30264c0409ca1f&rlz=1C5CHFA_enUS1086US1086&sxsrf=ACQVn0_7e9rl6Hll59WYv32GFEB-BmkPgQ:1708712262855&q=wonder+women&tbm=isch&source=lnms&sa=X&ved=2ahUKEwjCpM2bicKEAxXjxeYEHS1_C-UQ0pQJegQICxAB&biw=943&bih=717&dpr=2#imgrc=yKIRtjN4VBy_cM"><img class="heropic" src="images/wonder.woman.jpeg" alt="Wonder Woman Pic""></a></td>
                     <td>
                         <ul>
                             <li>Flight</li>
