--- a/superhero.html
+++ b/superhero.html
@@ -74,7 +74,7 @@
                 <tr>
                     <th>Deadpool</th>
                     <td>Wade Wilsont</td>
-                    <td><a href="https://miro.medium.com/v2/resize:fit:1200/1*0ubYRV_WNR9iYrzUAVINHw.jpeg"><img class="heropic" src="image/deadpool.jpg" alt="Deadpool Pic"></a></td>
+                    <td><a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.imdb.com%2Ftitle%2Ftt1431045%2F&psig=AOvVaw0EwIPxB9DpF2WBJ53PEgQe&ust=1708798773234000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCMij9NCJwoQDFQAAAAAdAAAAABAE"><img class="heropic" src="image/deadpool.jpg" alt="Deadpool Pic"></a></td>
                     <td>
                         <ul>
                             <li>Accelerated Healing Factor</li>
@@ -87,7 +87,7 @@
                  <tr>
                     <th>Black Panther</th>
                     <td>T'ChallaBlack Panthert</td>
-                    <td><a href="https://cdn.vox-cdn.com/thumbor/q-2sSjgnbVgJnqULYyfEf2JL8Xo=/0x0:915x610/1200x800/filters:focal(377x20:523x166)/cdn.vox-cdn.com/uploads/chorus_image/image/58796435/boseman.0.jpg"><img class="heropic" src="image/T'Challa.jpg" alt="Black Panther Pic"></a></td>
+                    <td><a href="https://media.newyorker.com/photos/5a875e3f33aebd0cab9bab12/16:9/w_1919,h_1079,c_limit/Brody-Passionate-Politics-Black-Panther.jpg"><img class="heropic" src="image/black-panther" alt="Black Panther Pic"></a></td>
                     <td>
                         <ul>
                             <li>Enhanced Strength and Senses</li>
