--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-<html lang="en>
-<head>
-  <title>Homepage</title>
- <meta charse="UTF-8">
-<body>
-  <h1>My Homepage</h1>
-<ul>
-  <li><a href= "https://sydneyjagger.github.io/amuse.html">"Funny Page"</a></li>
-  <li><a href= "https://sydneyjagger.github.io/profile.html"> "My Page"</a></li>
-  <li><a href= "https://sydneyjagger.github.io/inspire.html"> "Inspire Page"</a></li>
-</ul>
-</body>
-  <img src="UNC Logo.png" alt="UNC LOGO"> 
+<html lang="en">
+    <head>
+      <meta charset="UTF-8">
+      <title>Homepage</title>
+    </head>
+    <body>
+  <h1 class="title">My Homepage</h1>
+  <img height="100" src="UNC Logo.png" alt="UNC LOGO">
+  <ul>
+  <li>
+    <a href= "https://sydneyjagger.github.io/amuse.html">"Funny Page"</a>
+  </li>
+  <li>
+    <a href= "https://sydneyjagger.github.io/profile.html"> "My Page"</a>
+  </li>
+  <li>
+    <a href= "https://sydneyjagger.github.io/inspire.html"> "Inspire Page"</a>
+  </li>
+   </ul>
+  </body>
 </html>
