--- a/superhero.html
+++ b/superhero.html
@@ -59,7 +59,7 @@
                 <tr>
                     <th>Wonder Women</th>
                     <td>Diana Prince</td>
-                   <td><a href="https://www.google.com/search?sca_esv=1a30264c0409ca1f&rlz=1C5CHFA_enUS1086US1086&sxsrf=ACQVn0_7e9rl6Hll59WYv32GFEB-BmkPgQ:1708712262855&q=wonder+women&tbm=isch&source=lnms&sa=X&ved=2ahUKEwjCpM2bicKEAxXjxeYEHS1_C-UQ0pQJegQICxAB&biw=943&bih=717&dpr=2#imgrc=yKIRtjN4VBy_cM"><img class="heropic" src="images/wonder.woman.jpeg" alt="Wonder Woman Pic""></a></td>
+                   <td><a href="https://ew.com/thmb/K4ObzyqmFifzM2SowmZ85O_Cdkg=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Wonder-Woman-092823-b8db59b5f297498f8990ba1680bc539a.jpg"><img class="heropic" src="images/wonder.woman.webp" alt="Wonder Woman Pic""></a></td>
                     <td>
                         <ul>
                             <li>Flight</li>
@@ -74,7 +74,7 @@
                 <tr>
                     <th>Deadpool</th>
                     <td>Wade Wilsont</td>
-                    <td><a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.imdb.com%2Ftitle%2Ftt1431045%2F&psig=AOvVaw0EwIPxB9DpF2WBJ53PEgQe&ust=1708798773234000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCMij9NCJwoQDFQAAAAAdAAAAABAE"><img class="heropic" src="image/deadpool.jpg" alt="Deadpool Pic"></a></td>
+                    <td><a href="https://img.asmedia.epimg.net/resizer/qPB-KVCYJOmWhTuW9aLAYQ7x7fo=/1288x725/cloudfront-eu-central-1.images.arcpublishing.com/diarioas/7WY6OHNLCFHLTDLJ46LOX4PEAA.jpg"><img class="heropic" src="image/deadpool.avif" alt="Deadpool Pic"></a></td>
                     <td>
                         <ul>
                             <li>Accelerated Healing Factor</li>
@@ -87,7 +87,7 @@
                  <tr>
                     <th>Black Panther</th>
                     <td>T'ChallaBlack Panthert</td>
-                    <td><a href="https://media.newyorker.com/photos/5a875e3f33aebd0cab9bab12/16:9/w_1919,h_1079,c_limit/Brody-Passionate-Politics-Black-Panther.jpg"><img class="heropic" src="image/black-panther" alt="Black Panther Pic"></a></td>
+                    <td><a href="https://images.tntdrama.com/tnt/$dyna_params/https%3A%2F%2Fi.cdn.tntdrama.com%2Fassets%2Fimages%2F2020%2F02%2FBlack-Panther-1920x1080.jpg"><img class="heropic" src="image/black-panther.jpg" alt="Black Panther Pic"></a></td>
                     <td>
                         <ul>
                             <li>Enhanced Strength and Senses</li>
