--- a/template.html
+++ b/template.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Template</title>
-    </head>
-    <body>
-        <h1>Page Heading</h1>
-        <div id="navhome">
-            <a href="index.html"><img height="50" src="images/home.png" alt="Home Button"></a>
-        </div>
-    </body>
+  <head>
+    <meta charset="UTF-8">
+    <title>TEMPLATE</title>
+  </head>
+  <body>
+    <H1>Page Title</H1>
+  </body>
 </html>
