--- a/test.html
+++ b/test.html
@@ -5,38 +5,39 @@
     <title>Testing Page</title>
   </head>
   <body>
-    <h1>Testing</h1>
+    <H1>Testing</H1>
     <table>
       <tr>
         <th>Page Name</th>
         <th>URL</th>
-        <th>Validation</th>
+        <th>Valisation</th>
       </tr>
       <tr>
         <th>Template</th>
         <td><a href="https://sydneyjagger.github.io/template.html">https://sydneyjagger.github.io/template.html</a></td>
-        <td><a href="https://validator.w3.org/nu/?doc=httpssydneyjagger.github.iotemplate.html">VALIDATE</a></td>
+        <td><a href="https://validator.w3.org/nu/?doc=https://sydneyjagger.github.io/template.html">VALIDATE</a></td>
       </tr>
        <tr>
         <th>Home Page</th>
         <td><a href="https://sydneyjagger.github.io/index.html">https://sydneyjagger.github.io/index.html</a></td>
-        <td><a href="https://validator.w3.org/nu/?doc=httpssydneyjagger.github.ioindex.html">VALIDATE</a></td>
+        <td><a href="https://validator.w3.org/nu/?doc=https://sydneyjagger.github.io/index.html">VALIDATE</a></td>
       </tr>
        <tr>
         <th>Profile</th>
-        <td><a href="https://sydneyjagger.github.io/profile.html">https://sydneyjagger.github.io/profile.html</a></td>
-        <td><a href="https://validator.w3.org/nu/?doc=httpssydneyjagger.github.ioprofile.html">VALIDATE</a></td>
+          <td><a href="https://sydneyjagger.github.io/profile.html">https://sydneyjagger.github.io/profile.html</a></td>
+         <td><a href="https://validator.w3.org/nu/?doc=https://sydneyjagger.github.io/profile.html">VALIDATE</a></td>
       </tr>
        <tr>
         <th>Amuse</th>
-        <td><a href="https://sydneyjagger.github.io/amuse.html">https://sydneyjagger.github.io/amuse.html</a></td>
-        <td><a href="https://validator.w3.org/nu/?doc=httpssydneyjagger.github.ioamuse.html">VALIDATE</a></td>
+          <td><a href="https://sydneyjagger.github.io/amuse.html">https://sydneyjagger.github.io/amuse.html</a></td>
+         <td><a href="https://validator.w3.org/nu/?doc=https://sydneyjagger.github.io/amuse.html">VALIDATE</a></td>
       </tr>
        <tr>
         <th>Inspire</th>
-        <td><a href="https://sydneyjagger.github.io/inspire.html">https://sydneyjagger.github.io/inspire.html</a></td>
-        <td><a href="https://validator.w3.org/nu/?doc=httpssydneyjagger.github.ioinspire.html">VALIDATE</a></td>
+          <td><a href="https://sydneyjagger.github.io/inspire.html">https://sydneyjagger.github.io/inspire.html</a></td>
+         <td><a href="https://validator.w3.org/nu/?doc=https://sydneyjagger.github.io/inspire.html">VALIDATE</a></td>
       </tr>
     </table>
   </body>
 </html>
+
