--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
   <h1 class="title">My Homepage</h1>
-  <img height="100" src="UNC Logo.png" alt="UNC LOGO">
+  <img src="UNC Logo.png" alt="UNC LOGO">
   <ul>
   <li>
     <a href= "https://sydneyjagger.github.io/amuse.html">"Funny Page"</a>
