--- a/amuse.html
+++ b/amuse.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"
-    <title>The Internet is Amusing</title>
+    <meta charset="UTF-8">
+    <title>Amuse Me</title>
   </head>
   <body>
     <h1>Funny Things on the Web</h1>
@@ -22,8 +22,6 @@
       <h2>Trends of 2024 Laughs</h2>
     <p>This a recent trend of 2024 and it has filled my TikTok page!</p>
     <a href="https://www.tiktok.com/@kervo.dolo/video/7325928501960297771?lang=en">Nobody Knows Me...</a>
-  </section>
-    <a herf="idex.html>img src="images/button_home.png" alt="HOME"></a>
+   </section>
   </body>
-  </head>
 </html>
