--- a/inspire.html
+++ b/inspire.html
@@ -1,10 +1,13 @@
-<html>
-    <head>
-        <title>Malala's Story</title>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+      <title>Inspiration</title>
+         <meta charset="UTF-8">
     </head>
     <body>
       <h1>Malala Yousafzai</h1>
-      <h2>Portrait</h2>
+       <h2>Portrait</h2>
       <img src= "https://images.ctfassets.net/0oan5gk9rgbh/JUBG7KwUpaVZhz8H0oegx/cf21c550df805729a3d71b5260fd9b8e/Malala_grad.jpg?w=992&h=744&fit=fill&fm=webp&f=faces" alt="Malala"
       <h2>What makes Malala a hero?</h2>
       <p>Malala Yousafzai is a Pakistani female education 
