--- a/inspire.html
+++ b/inspire.html
@@ -8,7 +8,7 @@
     <body>
       <h1>Malala Yousafzai</h1>
        <h2>Portrait</h2>
-      <img src= "https://images.ctfassets.net/0oan5gk9rgbh/JUBG7KwUpaVZhz8H0oegx/cf21c550df805729a3d71b5260fd9b8e/Malala_grad.jpg?w=992&h=744&fit=fill&fm=webp&f=faces" alt="Malala"
+      <img src="https://cdn.britannica.com/71/179071-050-CF95982C/Malala-Yousafzai-2013.jpg" alt="Malala.webp">
       <h2>What makes a hero?</h2>
       <p>Malala Yousafzai is a Pakistani female education 
       activist and the 2014 Nobel Peace Prize laureate at the age of 17. 
