--- a/amuse.html
+++ b/amuse.html
@@ -23,5 +23,8 @@
     <p>This a recent trend of 2024 and it has filled my TikTok page!</p>
     <a href="https://www.tiktok.com/@kervo.dolo/video/7325928501960297771?lang=en">Nobody Knows Me...</a>
    </section>
+    <div id="navhome">
+            <a href="index.html"><img height="50" src="images/home.png" alt="Home Button"></a>
+        </div>
   </body>
 </html>
