--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
     <a href= "https://sydneyjagger.github.io/inspire.html"> "Inspire Page"</a>
   </li>
    </ul>
+        <div id="navhome">
+            <a href="index.html"><img height="50" src="images/home.png" alt="Home Button"></a>
+        </div>
   </body>
 </html>
