--- a/inspire.html
+++ b/inspire.html
@@ -15,5 +15,8 @@
       She is the world's youngest Nobel Prize laureate, the second Pakistani 
       and the first Pashtun to receive a Nobel Prize.</p>
       <p><a href="https://malala.org/malalas-story">Learn More...</a>a></p> 
+      <div id="navhome">
+            <a href="index.html"><img height="50" src="images/home.png" alt="Home Button"></a>
+        </div>
     </body>
 </html>
