--- a/superhero.html
+++ b/superhero.html
@@ -74,7 +74,7 @@
                 <tr>
                     <th>Deadpool</th>
                     <td>Wade Wilsont</td>
-                    <td><a href="https://img.asmedia.epimg.net/resizer/qPB-KVCYJOmWhTuW9aLAYQ7x7fo=/1288x725/cloudfront-eu-central-1.images.arcpublishing.com/diarioas/7WY6OHNLCFHLTDLJ46LOX4PEAA.jpg"><img class="heropic" src="image/deadpool.avif" alt="Deadpool Pic"></a></td>
+                    <td><a href="https://img.asmedia.epimg.net/resizer/qPB-KVCYJOmWhTuW9aLAYQ7x7fo=/1288x725/cloudfront-eu-central-1.images.arcpublishing.com/diarioas/7WY6OHNLCFHLTDLJ46LOX4PEAA.jpg"><img class="heropic" src="deadpool.jpg" alt="Deadpool Pic"></a></td>
                     <td>
                         <ul>
                             <li>Accelerated Healing Factor</li>
@@ -87,7 +87,7 @@
                  <tr>
                     <th>Black Panther</th>
                     <td>T'ChallaBlack Panthert</td>
-                    <td><a href="https://images.tntdrama.com/tnt/$dyna_params/https%3A%2F%2Fi.cdn.tntdrama.com%2Fassets%2Fimages%2F2020%2F02%2FBlack-Panther-1920x1080.jpg"><img class="heropic" src="image/black-panther.jpg" alt="Black Panther Pic"></a></td>
+                    <td><a href="https://images.tntdrama.com/tnt/$dyna_params/https%3A%2F%2Fi.cdn.tntdrama.com%2Fassets%2Fimages%2F2020%2F02%2FBlack-Panther-1920x1080.jpg"><img class="heropic" src="black-panther.webp" alt="Black Panther Pic"></a></td>
                     <td>
                         <ul>
                             <li>Enhanced Strength and Senses</li>
