--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
       <meta charset="UTF-8">
       <title>Homepage</title>
+        <link rel="stylesheet" href="https://sydneyjagger.github.io/css/main.css">
     </head>
     <body>
   <h1 class="title">My Homepage</h1>
