--- a/inspire.html
+++ b/inspire.html
@@ -4,6 +4,7 @@
   <head>
       <title>Inspiration</title>
          <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://sydneyjagger.github.io/css/main.css">
     </head>
     <body>
       <h1>Malala Yousafzai</h1>
