--- a/profile.html
+++ b/profile.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>This is Me</title>
+    <link rel="stylesheet" href="https://sydneyjagger.github.io/css/main.css">
   </head>
   <body>
         <h1>Sydney Jagger</h1>
