--- a/amuse.html
+++ b/amuse.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Amuse Me</title>
+    <link rel="stylesheet" href="https://sydneyjagger.github.io/css/main.css">
   </head>
   <body>
     <h1>Funny Things on the Web</h1>
