--- a/template.html
+++ b/template.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>TEMPLATE</title>
+    <link rel="stylesheet" href="https://sydneyjagger.github.io/css/main.css">
   </head>
   <body>
     <H1>Page Title</H1>
