--- a/superhero.html
+++ b/superhero.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Superheroes</title>
+<link rel="stylesheet" href="https://sydneyjagger.github.io/css/main.css">
 
         <style>
             .heropic
