--- a/superhero.html
+++ b/superhero.html
@@ -88,8 +88,7 @@
                  <tr>
                     <th>Black Panther</th>
                     <td>T'ChallaBlack Panthert</td>
-                    <td><a href="https://images.tntdrama.com/tnt/$dyna_params/https%3A%2F%2Fi.cdn.tntdrama.com%2Fassets%2Fimages%2F2020%2F02%2FBlack-Panther-1920x1080.jpg"><img class="heropic" src="black-panther.webp" alt="Black Panther Pic"></a></td>
-                    <td>
+                    <td><a href="https://i.kinja-img.com/image/upload/c_fill,h_900,q_60,w_1600/0b6a12ddec48d95278105ca50eb49bcf.jpg"><img class="heropic" src="images/black.panther.webp" alt="Black Panther Pic""></a></td>
                         <ul>
                             <li>Enhanced Strength and Senses</li>
                         </ul>
