--- a/resume/index.html
+++ b/resume/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://allysonjagger.github.io/css/style.css">
+    <link rel="stylesheet" href="https://sydneyjagger.github.io/css/style.css">
     <title>Resume</title>
   </head>
   <body>
