--- a/resume/index.html
+++ b/resume/index.html
@@ -12,7 +12,7 @@
         <li><a href=index.html#contactinfo>Contat Info</a></li>
         <li><a href=index.html#education>Education</a></li>
         <li><a href=index.html#expereice>Expereince</a></li>
-        <li> <a href="https://allysonjagger.github.io/resume/skills.html">Skills</a></li>
+        <li> <a href="https://sydneyjagger.github.io/resume/skills">Skills</a></li>
       </ul>
     </nav>
     <section id="contatinfo">
