--- a/search.html
+++ b/search.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<link rel="stylesheet" href="https://sydneyjagger.github.io/css/main.css">
 <title>Google Search</title>
 </head>
 <body>
